<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddNewPasswordActivity">
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    android:focusableInTouchMode="true"
    >
    
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:paddingBottom="@dimen/add_title_padding"
      android:text="@string/add_title"
      android:textSize="@dimen/h1"/>
    
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/add_name"
      android:textSize="@dimen/h2" />
    
    <EditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:hint="@string/add_name_hint"
      android:textColor="@color/self_blue_3"
      android:textColorHint="@color/self_blue_6"
      android:backgroundTint="@color/self_blue_3"
      android:textCursorDrawable="@drawable/edittext_cursor"
      android:inputType="textCapCharacters"
      />
    
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/add_website_name"
      android:textSize="@dimen/h2" />
    
    <EditText
      android:id="@+id/website"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/self_blue_3"
      android:gravity="center"
      android:hint="@string/add_website_name_hint"
      android:textColor="@color/self_blue_3"
      android:textColorHint="@color/self_blue_6"
      android:textCursorDrawable="@drawable/edittext_cursor"
      android:inputType="textWebEditText"/>
    
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/add_password"
      android:textSize="@dimen/h2" />
    
    <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:hint="@string/add_password_hint"
      android:textColor="@color/self_blue_3"
      android:textColorHint="@color/self_blue_6"
      android:backgroundTint="@color/self_blue_3"
      android:textCursorDrawable="@drawable/edittext_cursor"
      android:typeface="monospace"
      android:lines="3"/>
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      >
      
      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_length"
        android:layout_weight="1"
        android:textSize="@dimen/h2" />
  
      <TextView
        android:id="@+id/seek_length_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_length_default"
        android:layout_weight="1"
        android:textSize="@dimen/h2" />
      
    </LinearLayout>
    
    <SeekBar
      android:id="@+id/seek_length"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_columnWeight="1"
      android:layout_gravity="fill"
      android:backgroundTint="@color/self_blue_2"
      android:max="5"
      android:progress="1"
      android:progressTint="@color/self_blue_3"
      android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
      android:thumbTint="@color/self_blue_3" />
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical">
      
      <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:useDefaultMargins="true">
        
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_gravity="fill_horizontal"
          android:text="@string/add_enable_upper_letters"
          android:textSize="@dimen/h2" />
        
        <CheckBox
          android:id="@+id/useUppers"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:buttonTint="@color/self_blue_3" />
        
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_gravity="fill_horizontal"
          android:text="@string/add_enable_digits"
          android:textSize="@dimen/h2" />
        
        <CheckBox
          android:id="@+id/useDigits"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:buttonTint="@color/self_blue_3"
          android:checked="true"/>
        
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_columnWeight="1"
          android:layout_gravity="fill_horizontal"
          android:text="@string/add_enable_symbols"
          android:textSize="@dimen/h2" />
        
        <CheckBox
          android:id="@+id/useSymbols"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:buttonTint="@color/self_blue_3" />
      
      </GridLayout>
    
    </LinearLayout>
  
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">
    
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_button_margin"
        android:layout_weight="1"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/add_copy"
        android:orientation="vertical"
        android:paddingTop="@dimen/main_button_padding"
        android:paddingBottom="@dimen/main_button_padding"
        android:text="@string/add_copy"
        android:onClick="onClickCopyPassword"/>
    
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_button_margin"
        android:layout_weight="1"
        android:background="@drawable/button_main"
        android:drawableTop="@drawable/add_generate"
        android:orientation="vertical"
        android:paddingTop="@dimen/main_button_padding"
        android:paddingBottom="@dimen/main_button_padding"
        android:text="@string/add_generate"
        android:onClick="onClickGeneratePassword"/>
  
    </LinearLayout>
  
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/main_button_margin"
      android:background="@drawable/button_main"
      android:drawableTop="@drawable/add_save"
      android:orientation="vertical"
      android:paddingTop="@dimen/main_button_padding"
      android:paddingBottom="@dimen/main_button_padding"
      android:text="@string/add_save"
      android:onClick="onClickSavePassword"/>
  
  </LinearLayout>

</ScrollView>


