<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="@dimen/screen_padding"
  tools:context=".ChoosenPasswordActivity">
  
  <TextView
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/add_title_padding"
    android:textSize="@dimen/h1" />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/ch_psw_website_title"
    android:textSize="@dimen/h2" />
  
  <TextView
    android:id="@+id/website"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/ch_psw_margin_bottom"
    android:gravity="center"
    android:textSize="@dimen/h2" />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/ch_psw_password_title"
    android:textSize="@dimen/h2" />
  
  <TextView
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:lines="4"
    android:textSize="@dimen/h1"
    android:typeface="monospace" />
  
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <Button
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/main_button_margin"
      android:layout_weight="1"
      android:background="@drawable/button_main"
      android:drawableTop="@drawable/make_password_delete"
      android:onClick="onClickDeletePassword"
      android:orientation="vertical"
      android:paddingTop="@dimen/main_button_padding"
      android:paddingBottom="@dimen/main_button_padding"
      android:text="@string/ch_psw_btn_delete" />
    
    <Button
      android:id="@+id/do_favorite"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/main_button_margin"
      android:layout_weight="1"
      android:background="@drawable/button_main"
      android:drawableTop="@drawable/make_favorite_off"
      android:onClick="onClickChangePasswordFavorite"
      android:orientation="vertical"
      android:paddingTop="@dimen/main_button_padding"
      android:paddingBottom="@dimen/main_button_padding"
      android:text="@string/ch_psw_btn_add_favorite" />
  
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
  
    <Button
      android:id="@+id/copy"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/main_button_margin"
      android:layout_weight="1"
      android:background="@drawable/button_main"
      android:drawableTop="@drawable/add_copy"
      android:onClick="onClickCopyPassword"
      android:orientation="vertical"
      android:paddingTop="@dimen/main_button_padding"
      android:paddingBottom="@dimen/main_button_padding"
      android:text="@string/add_copy" />
    
    <Button
      android:id="@+id/change_visible"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/main_button_margin"
      android:layout_weight="1"
      android:background="@drawable/button_main"
      android:drawableTop="@drawable/visible_off"
      android:onClick="onClickChangePasswordFavorite"
      android:orientation="vertical"
      android:paddingTop="@dimen/main_button_padding"
      android:paddingBottom="@dimen/main_button_padding"
      android:text="@string/ch_psw_btn_visible" />
  
  </LinearLayout>

</LinearLayout>